@@ -282,6 +282,11 @@ III) MAJOR CHANGES FROM PREVIOUS RELEASES
        Canon PIXMA DS810  (EXPERIMENTAL)
        Canon PIXMA 50i    (EXPERIMENTAL)
        Canon PIXMA 80i    (EXPERIMENTAL)
+       Canon PIXMA 450i   (EXPERIMENTAL)
+       Canon PIXMA 455i   (EXPERIMENTAL)
+       Canon PIXMA 550i   (EXPERIMENTAL)
+       Canon PIXMA 6100i  (EXPERIMENTAL)
+       Canon PIXMA 6500i  (EXPERIMENTAL)
        Canon PIXMA i70    (EXPERIMENTAL)
        Canon PIXMA i450   (EXPERIMENTAL)
        Canon PIXMA i455   (EXPERIMENTAL)
